--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,8 @@ image: ubuntu
 platform: Any CPU
 
 environment:
-  CODACY_PROJECT_TOKEN: temp
+  CODACY_PROJECT_TOKEN:
+    secure: Dq24If7HbzRFBWwwSplkyGcuBcVgqIRfJWezeae0/iV8bvRcMN6Sbcu00ibHAC9+
   CC_TEST_REPORTER_ID:
     secure: t0KOIwE/+WlSQD7ekkLYxX8SbqhFG68ftpUoZKC4TBU9lfq/sVvqNH0hP+Tzi2aRh/DZgxcsRZXOOaGY8VSS5a7hxPBkY7chBoRG1pjgB7E=
 
@@ -29,7 +30,7 @@ after_test:
   - sh: ./codeclimate-test-reporter before-build
   - sh: ./codeclimate-test-reporter after-build -t lcov --exit-code $?
   # Send test result to Codacy
-  # - sh: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r ./coverage/lcov.info
+  - sh: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r ./coverage/lcov.info
 
 # Don't actually build.
 build: off
