--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Converts a regular JavaScript date to the modern Julian date format YYYYDDD.",
   "type": "module",
   "exports": "./index.js",
-  "types": "./index.d.ts",
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
     "test": "mocha",
@@ -22,7 +21,8 @@
     "format",
     "banking",
     "modern-julian",
-    "yyyyddd"
+    "yyyyddd",
+    "yyddd"
   ],
   "author": "The Corporation of the City of Sault Ste. Marie",
   "license": "MIT",
@@ -31,13 +31,8 @@
   },
   "homepage": "https://github.com/cityssm/modern-julian-date#readme",
   "devDependencies": {
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.24.0",
-    "@typescript-eslint/parser": "^5.24.0",
-    "eslint": "^8.15.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-unicorn": "^42.0.0"
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.4",
+    "eslint-config-cityssm": "^1.2.0"
   }
 }
