--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Package
         run: |
           npm ci
-          npm install -g mocha c8
+          npm install -g c8
 
       - name: Code Climate (Before)
         if: ${{ github.event_name != 'pull_request' && env.CC_TEST_REPORTER_ID != '' && matrix.node == 20 }}
@@ -38,7 +38,7 @@ jobs:
           ./codeclimate-test-reporter before-build
 
       - name: Run Coverage Testing
-        run: c8 --reporter=lcov --reporter=text --reporter=text-summary mocha
+        run: npm run coverage
 
       - name: Code Climate (After)
         if: ${{ always() && github.event_name != 'pull_request' && env.CC_TEST_REPORTER_ID != '' && matrix.node == 20 }}
