--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "homepage": "https://github.com/cityssm/modern-julian-date#readme",
   "devDependencies": {
-    "@types/node": "^20.12.12",
-    "eslint-config-cityssm": "^3.2.0"
+    "@types/node": "^22.0.2",
+    "eslint-config-cityssm": "^5.0.2",
+    "prettier-config-cityssm": "^1.0.0"
   }
 }
